updated the login page video

--- a/tasks/login/index.html
+++ b/tasks/login/index.html
@@ -8,7 +8,7 @@
 <body>
     
     <video width="100%" height="100%" controls autoplay>
-        <source src="LoginForm.mp4" type="video/mp4">
+        <source src="login.mp4" type="video/mp4">
       </video>
 </body>
 </html>
