--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
     <div class="nav">
         <a href="index.html"><img id="logo" src="images/explorin_logo.jpeg" width=150px height=50px></a>
         <div class="tabs">
-            <a class="s" href="about.html"><div >ABOUT</div></a>
+            <a href="about.html"><div >ABOUT</div></a>
             <a href="project.html"><div>PROJECTS</div></a>
-            <a href="contact.html"><div>CONTACTS</div></a>
+            <a class="current" href="contact.html"><div>CONTACTS</div></a>
         </div>
     </div>
 
