--- a/project.html
+++ b/project.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="Css/project.css">
+    
 </head>
 
 <body>
     <div class="nav">
         <a href="index.html"><img id="logo" src="images/explorin_logo.jpeg" width=150px height=50px></a>
         <div class="tabs">
-            <a class="s" href="about.html"><div >ABOUT</div></a>
-            <a href="project.html"><div>PROJECTS</div></a>
+            <a href="about.html"><div >ABOUT</div></a>
+            <a class="current" href="project.html"><div>PROJECTS</div></a>
             <a href="contact.html"><div>CONTACTS</div></a>
         </div>
     </div>
